Fix issues when starting the game over Make mobile responsive Check if random targets are not too close to the previous one

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,18 +33,25 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@media (max-width: 1000px) {
+    #output {
+        height: 800px;
+        width: 600px;
+    }
+}
+
 #description {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 20px;
     margin-top: 50px;
     margin-left: 100px;
     margin-right: 100px;
 }
 
-@media (min-width: 1000px) {
+@media (max-width: 1000px) {
     #description {
-        flex-direction: row;
+        flex-direction: column;
     }
 }
 
